Correction contrast page2

--- a/New-projet4/style.css
+++ b/New-projet4/style.css
@@ -782,6 +782,10 @@ h4 {
     color: #F9DBCD!important;
 }
 
+.tc-dark {
+    color: #391909!important;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
     color: #424242!important;
